#pragma once
#include "GameObject.h"
class Snake :
    public GameObject
{
    CellPosition endCellPos;
    static int count;
public:
    Snake(const CellPosition& startCellPos, const CellPosition& endCellPos);
    virtual void Draw(Output* pOut) const;
    virtual void Apply(Grid* pGrid, Player* pPlayer);
    CellPosition GetEndPosition() const;
    bool IsOverlapping(GameObject* newobj, Grid* pGrid) const;
    virtual void Save(ofstream&);
    static int getCount();
    virtual ~Snake();
};

